<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cback">


    <TextView
        android:id="@+id/registroTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PrimerDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_empresa"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registroTittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SegundoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PrimerDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tercerDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rut_usuario"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SegundoDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdUserRut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuartoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cargo"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tercerDato">

        <AutoCompleteTextView
            android:id="@+id/cargo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textSize="20sp"
            app:simpleItems="@array/simple_items"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quintoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cuartoDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sextoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirme_contrase_a"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quintoDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmar_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sextoDato" />


</androidx.constraintlayout.widget.ConstraintLayout>
