<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cback">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registro_de_maquinas"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMaquina"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PrimerDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_de_maquina"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMaquina">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SegundoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/marca"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PrimerDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tercerDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modelo"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SegundoDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdUserRut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quintoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/motorizaci_n"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tercerDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sextoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/matricula_o_identificador"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quintoDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmar_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sextoDato" />



</androidx.constraintlayout.widget.ConstraintLayout>
