<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cback"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/iniciar_sesi_n"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PrimerDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:hint="@string/id_empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SegundoDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:hint="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PrimerDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tercerDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:hint="@string/contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SegundoDato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdUserRut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:id="@+id/btnRecuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/recuperar_contrase_a"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tercerDato" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecuperar" />

    <Button
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:id="@+id/btnCrearUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />


</androidx.constraintlayout.widget.ConstraintLayout>
