<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cback"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/maquinaTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/maquinas"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMaquina"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maquinaTittle" />

    <Button
        android:id="@+id/agregarMaquina"
        android:layout_width="155dp"
        android:layout_height="88dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/agregar_n_maquina"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/imgMaquina"
        app:layout_constraintTop_toBottomOf="@+id/maquinaTittle" />

    <ImageView
        android:id="@+id/imgMaquinaDescripcion"
        android:layout_width="110dp"
        android:layout_height="111dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregarMaquina" />

    <TextView
        android:id="@+id/decripcionTxt"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombre_de_la_maquina_n_descripci_n"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgMaquinaDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/agregarMaquina" />

    <Button
        android:id="@+id/btnVerPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ver_perfil"
        app:layout_constraintBottom_toTopOf="@+id/btnBackHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBackHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cerrar_session"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
