<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cback"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/maquina"
        android:textAlignment="textStart"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMaquina"
        android:layout_width="137dp"
        android:layout_height="127dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/fechaMante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/ultima_mantenci_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMaquina">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datosMante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/mantoHecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/reparaciones_hechas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fechaMante">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datosManteHechos"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/carateristicasMaquina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/caracteristicas_de_la_maquina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mantoHecha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datosCaracteristicas"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>